<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_login"
        android:name="fi.monad.shoestore.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/navigation_welcome"
            app:popUpTo="@id/navigation_login"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_welcome"
        android:name="fi.monad.shoestore.ui.welcome.WelcomeFragment"
        android:label="@string/title_welcome"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionFragment"
            app:destination="@id/navigation_instruction"
            app:popUpTo="@id/navigation_welcome"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_instruction"
        android:name="fi.monad.shoestore.ui.instruction.InstructionFragment"
        android:label="@string/title_instructions"
        tools:layout="@layout/fragment_instruction">
        <action
            android:id="@+id/action_instructionFragment_to_shoeListFragment"
            app:destination="@id/navigation_shoe_list"
            app:popUpTo="@id/navigation_instruction"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/navigation_shoe_list"
        android:name="fi.monad.shoestore.ui.shoes.ShoeListFragment"
        app:defaultNavHost="true"
        android:label="@string/title_shoe_list"
        tools:layout="@layout/fragment_shoe_list">
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailsFragment"
            app:destination="@id/navigation_shoe_details" />
        <action
            android:id="@+id/action_shoeListFragment_to_addShoesFragment"
            app:destination="@id/navigation_add_shoes" />

    </fragment>
    <fragment
        android:id="@+id/navigation_shoe_details"
        android:name="fi.monad.shoestore.ui.shoedetails.ShoeDetailsFragment"
        android:label="@string/title_shoe_list"
        tools:layout="@layout/fragment_shoe_details">
        <action
            android:id="@+id/action_shoeDetailsFragment_to_shoeListFragment"
            app:destination="@id/navigation_shoe_list"
            app:popUpTo="@id/navigation_shoe_details" />
    </fragment>
    <fragment
        android:id="@+id/navigation_add_shoes"
        android:name="fi.monad.shoestore.ui.addshoes.AddShoesFragment"
        android:label="@string/title_add_shoes"
        tools:layout="@layout/fragment_add_shoes">
        <action
            android:id="@+id/action_addShoesFragment_to_shoeListFragment"
            app:destination="@id/navigation_shoe_list"
            app:popUpTo="@id/navigation_shoe_details" />
    </fragment>

</navigation>