<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fi.monad.shoestore.ui.addshoes.AddShoesFragment"
    >


    <data>
        <variable
            name="addShoesViewModel"
            type="fi.monad.shoestore.ui.shoes.ShoeListViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/mainScreen"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/title_add_shoes"
            android:textAllCaps="true"
            android:textColor="@color/purple_700"
            android:textSize="20sp" />

        <GridLayout
        android:id="@+id/add_shoes_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:alignmentMode="alignBounds"
        android:columnOrderPreserved="false"
        android:columnCount="2"
        android:orientation="horizontal"
        tools:context=".GridXMLActivity">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_columnSpan="2"
                android:layout_gravity="right|center_horizontal|fill"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:paddingTop="20dp"
                android:text="@string/name_label" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="2">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={addShoesViewModel.newShoes.name}"
                android:afterTextChanged="@{addShoesViewModel::setName}"
                android:layout_columnSpan="2"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:paddingTop="20dp"
                android:layout_gravity="fill" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_columnSpan="2"
                android:layout_gravity="fill"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:paddingTop="20dp"
                android:text="@string/company_label" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="2">

            <EditText
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@{addShoesViewModel.newShoes.company}"
                android:afterTextChanged="@{addShoesViewModel::setCompany}"
                android:layout_columnSpan="2"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:paddingTop="20dp"
                android:layout_gravity="fill"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="20dp"
                    android:text="@string/size_label" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_columnWeight="2">

                <EditText
                    android:id="@+id/size"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@{String.valueOf(addShoesViewModel.newShoes.size)}"
                    android:afterTextChanged="@{addShoesViewModel::setSize}"
                    android:layout_columnSpan="2"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="20dp"
                    android:layout_gravity="fill" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_columnSpan="2"
                    android:layout_gravity="fill"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="20dp"
                    android:text="@string/description_label" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_columnWeight="2">

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@{addShoesViewModel.newShoes.description}"
                    android:afterTextChanged="@{addShoesViewModel::setDescription}"
                    android:layout_columnSpan="2"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="20dp"
                    android:layout_gravity="fill" />
            </LinearLayout>

    </GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="48dp">

            <Button
                android:id="@+id/add_shoes_dismiss_btn"
                style="@android:style/Widget.Material.Light.Button.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/dismiss_btn" />

            <Button
                android:id="@+id/add_shoes_submit_btn"
                style="@android:style/Widget.Material.Light.Button.Small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/add" />

        </LinearLayout>

    </LinearLayout>

</layout>